feat: responsive first page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;600;700;800&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   overflow-x: hidden;
 }
@@ -24,8 +28,8 @@ p {
 }
 
 .page {
-  width: 1280px;
-  height: 720px;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
