--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -1,55 +1,82 @@
 .welcomePage {
-  background-color: #ffffff;
+  background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
+  font-size: min(1.125vw, 16px);
+  position: relative;
+
+  // TODO: still doesn't look good on high width
+  &::after {
+    content: "";
+    background-image: url("/assets/white-curve3x.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -2em;
+    height: max(20vmin, 82px);
+    z-index: 1;
+  }
 }
 
-.purpleBubble {
+.hero {
+  display: block;
+  margin-top: 2.5em;
+  padding-inline: 8em;
+  z-index: 2;
+
+  .textLogo {
+    animation: text-appearence 0.5s ease-out 0.5s both;
+
+    margin-inline: auto;
+    width: 6em;
+  }
+
+  .imageLogo {
+    animation: text-appearence 0.5s ease-out 0.7s both;
+
+    margin-left: auto;
+    margin-right: -4em;
+    width: 4em;
+  }
+
+  .title {
+    animation: text-appearence 0.5s ease-out 0.6s both;
+
+    background: linear-gradient(89.78deg, #704ee2 0.15%, #926ff7 99.81%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 5em;
+    font-weight: 800;
+    letter-spacing: -0.06em;
+    line-height: 1.3;
+    text-align: center;
+  }
+
+  .subtitle {
+    animation: text-appearence 1s ease-out 0.7s both;
+
+    color: #454267;
+    font-size: 1.4em;
+    font-weight: 700;
+    line-height: 1;
+    margin-top: 0.45em;
+    text-align: center;
+  }
+}
+
+.integrationsContainer {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 91.2%;
-  background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
-  border-radius: 0 0 50% 50%;
-  transform: scaleX(2);
+  bottom: 0;
+  width: 100vw;
+  padding-inline: 8em;
+
   display: flex;
+  gap: 7.125em;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-}
 
-.iphoneContainer {
-  position: absolute;
-  top: 346px;
-  backface-visibility: hidden;
-  transform: scaleX(0.5);
-  width: 320px;
-  display: flex;
-  justify-content: center;
-
-  animation: iphone-appearence 1s cubic-bezier(0, 0.6, 0.32, 1) 0.1s both;
-}
-
-.integrations {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 552px;
-  bottom: 115px;
-  transform: scaleX(0.5);
-  position: absolute;
-
-  div:first-child {
-    animation: text-appearence 0.5s ease-out 1s both;
-  }
-
-  div:last-child {
-    animation: store-appearence 0.6s ease-out 1s both;
-  }
-
-  .storeImage {
-    z-index: 2;
-    width: 175px;
+  .store {
     transition: all 100ms linear;
 
     &:hover {
@@ -57,79 +84,37 @@
       scale: 1.1;
     }
   }
-}
 
-.textLogo {
-  margin-top: 40px;
-  width: 96px;
-  z-index: 2;
+  .iphone {
+    animation: iphone-appearence 1s cubic-bezier(0, 0.6, 0.32, 1) 0.1s both;
+  }
 
-  animation: text-appearence 0.5s ease-out 0.5s both;
-}
+  // apple store
+  div:first-child {
+    animation: text-appearence 0.5s ease-out 1s both;
+  }
 
-.imageLogo {
-  align-self: flex-end;
-  width: 64px;
-  z-index: 2;
-  margin-right: 84px;
-
-  animation: text-appearence 0.5s ease-out 0.7s both;
-}
-
-.title {
-  z-index: 2;
-
-  font-family: "Manrope";
-  font-style: normal;
-  font-weight: 800;
-  font-size: 80px;
-  line-height: 104px;
-
-  text-align: center;
-  letter-spacing: -0.06em;
-
-  background: linear-gradient(89.78deg, #704ee2 0.15%, #926ff7 99.81%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-
-  animation: text-appearence 0.5s ease-out 0.6s both;
-}
-
-.subtitle {
-  margin-top: 10px;
-  z-index: 2;
-
-  font-family: "Manrope";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
-  text-align: center;
-  color: #454267;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-
-  animation: text-appearence 1s ease-out 0.7s both;
+  // google play
+  div:last-child {
+    animation: store-appearence 0.6s ease-out 1s both;
+  }
 }
 
 .scrollIconContainer {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, -30%);
-  z-index: 2;
-
   animation: text-appearence 1s ease-out 3s both;
+
+  position: absolute;
+  bottom: 0.3em;
+  left: 50%;
+  z-index: 2;
 }
 
 .qrContainer {
   position: absolute;
   right: 0;
   bottom: 0;
-  margin-right: 32px;
-  margin-bottom: 24px;
+  margin-right: 2em;
+  margin-bottom: 1.5em;
   display: flex;
   align-items: flex-end;
   z-index: 2;
@@ -138,34 +123,34 @@
 
   .qrText {
     font-weight: 600;
-    margin-right: -12px;
-
-    /* FIGMA */
-    font-size: 16px;
-    line-height: 22px;
+    margin-right: -0.75em;
+    font-size: 1em;
+    line-height: 1;
     letter-spacing: -0.02em;
     color: #454267;
   }
 
   .diagonalArrow {
-    margin-bottom: 28px;
-    margin-right: 7px;
+    margin-bottom: 1.75em;
+    margin-right: 0.5em;
+    width: 1em;
+    aspect-ratio: 1;
   }
 
   .qrImage {
-    width: 96px;
-    height: 96px;
+    width: 6em;
+    aspect-ratio: 1;
   }
 }
 
 @keyframes iphone-appearence {
   0% {
     opacity: 0;
-    transform: scaleX(0.5) translate(0, 100%);
+    transform: translate(0, 100%);
   }
   100% {
     opacity: 1;
-    transform: scaleX(0.5) translate(0, 0);
+    transform: translate(0, 0);
   }
 }
 
