feat: responsive destinations page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,7 +29,7 @@ p {
 
 .page {
   width: 100vw;
-  height: 100vh;
+  height: 50em;
   display: flex;
   flex-direction: column;
   align-items: center;
