--- a/styles/DestinationsPage.module.scss
+++ b/styles/DestinationsPage.module.scss
@@ -1,119 +1,103 @@
 .destinationPage {
   flex-direction: row;
   justify-content: center;
-  gap: 62px;
+  align-items: flex-start;
+  gap: 3.875em;
+  height: 50em;
+
+  &::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: #15141e;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 99%;
+    background: #ffffff;
+    border-radius: 0 0 50% 50%;
+    transform: scaleX(2);
+  }
 }
 
-.blackBackground {
-  position: absolute;
-  height: 100%;
-  width: 100vw;
-  background-color: #15141e;
-  z-index: 1;
-}
-
-.destinationsContainer {
+.destinations {
+  height: min(90%, 40em);
   position: relative;
-  margin-top: -1px;
-  width: 571px;
-  height: 521px;
-  border-radius: 32px;
-  background: linear-gradient(180deg, #f4f0ff 0%, #ffffff 100%);
-  z-index: 2;
-}
-
-.iconContainer {
-  height: 64px;
-  aspect-ratio: 1/1;
-  background: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 32px 56px rgba(68, 56, 107, 0.25);
-  backdrop-filter: blur(10px);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.searchIcon {
-  position: absolute;
-  top: 71px;
-  left: -20px;
-}
-
-.settingsIcon {
-  position: absolute;
-  top: 335px;
-  left: -20px;
-}
-.destinationsImageContainer {
-  position: relative;
-  width: calc(388px + 36px * 3);
-  top: -99px;
-  left: calc(101px - 36px);
-}
-
-.destinationsHeroText {
-  width: 445px;
-  display: flex;
-  flex-direction: column;
-  z-index: 2;
-}
-
-.findText {
-  font-family: "Manrope";
-  font-style: normal;
-  font-weight: 800;
-  font-size: 54px;
-  line-height: 64px;
-  letter-spacing: -0.04em;
-  color: #454267;
-  margin: -8px 0px;
-}
-
-.destinationText {
-  font-family: "Manrope";
-  font-style: normal;
-  font-weight: 800;
-  font-size: 72px;
-  line-height: 82px;
-  letter-spacing: -0.06em;
-  background: linear-gradient(273.07deg, #e95aec 0%, #8793ff 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-}
-
-.highlightDark {
-  color: #785bb6;
-  background: #dcd6fb;
-  border-radius: 8px;
-  padding: 1px 5px 2px;
-  letter-spacing: -0.04em;
-  font-family: "Manrope";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
-}
-
-.explainText {
-  font-family: "Manrope";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
-  letter-spacing: -0.04em;
-  color: #454267;
-}
-
-.whiteBubbleBottom {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 99%;
-  background: #ffffff;
-  border-radius: 0 0 50% 50%;
-  transform: scaleX(2);
+  scale: 0.9;
+  width: 37em;
   z-index: 1;
+
+  &::before {
+    background: linear-gradient(180deg, #f4f0ff 0%, #ffffff 100%);
+    border-radius: 2em;
+    bottom: 0;
+    content: "";
+    left: -1em;
+    position: absolute;
+    top: 8em;
+    width: 100%;
+  }
+
+  .icons {
+    display: flex;
+    flex-direction: column;
+    gap: 12.5em;
+    left: -2.5em;
+    position: absolute;
+    top: 13em;
+
+    div {
+      height: 4em;
+      width: 4em;
+      backdrop-filter: blur(10px);
+      background: rgba(255, 255, 255, 0.5);
+      border-radius: 50%;
+      box-shadow: 0px 32px 56px rgba(68, 56, 107, 0.25);
+      display: grid;
+      place-items: center;
+    }
+  }
+}
+
+.hero {
+  color: #454267;
+  font-weight: 800;
+  line-height: 1.4;
+  z-index: 1;
+  align-self: center;
+
+  h3 {
+    font-size: 3.375em;
+    letter-spacing: -0.04em;
+    margin: -0.5em 0;
+  }
+
+  h1 {
+    font-size: 4.5em;
+    letter-spacing: -0.06em;
+    background: linear-gradient(273.07deg, #e95aec 0%, #8793ff 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .heroDescription {
+    font-size: 1.5em;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: -0.04em;
+    width: 20em;
+
+    .highlightDark {
+      color: #785bb6;
+      background: #dcd6fb;
+      border-radius: 0.5em;
+      padding: 1px 5px 2px;
+    }
+  }
 }
