--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -1,5 +1,6 @@
 .welcomePage {
   background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
+  height: 100vh;
 
   // TODO: still doesn't look good on high width
   &::after {
