--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -1,7 +1,6 @@
 .welcomePage {
   background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
   height: 100vh;
-  min-height: 720px;
 
   // TODO: still doesn't look good on high width
   &::after {
@@ -22,6 +21,7 @@
 .hero {
   display: block;
   margin-top: 2.5em;
+  margin-bottom: 2.5em;
   padding-inline: 8em;
   z-index: 2;
 
@@ -66,13 +66,11 @@
 }
 
 .integrationsContainer {
-  position: absolute;
-  bottom: 0;
   width: 100vw;
   padding-inline: 2em;
+  margin-top: auto;
 
   display: flex;
-  // gap: 7.125em;
   gap: clamp(1em, 6vw, 7.125em);
   justify-content: center;
   align-items: center;
