--- a/styles/DestinationsPage.module.scss
+++ b/styles/DestinationsPage.module.scss
@@ -4,6 +4,7 @@
   align-items: flex-start;
   gap: 3.875em;
   height: 50em;
+  padding-inline: 2em;
 
   &::before {
     content: "";
@@ -24,10 +25,14 @@
     border-radius: 0 0 50% 50%;
     transform: scaleX(2);
   }
+
+  @media screen and (max-width: 675px) {
+    align-items: center;
+  }
 }
 
 .destinations {
-  height: min(90%, 40em);
+  height: min(90%, 30em);
   position: relative;
   scale: 0.9;
   width: 37em;
@@ -42,6 +47,10 @@
     position: absolute;
     top: 8em;
     width: 100%;
+
+    @media screen and (max-width: 675px) {
+      top: 5em;
+    }
   }
 
   .icons {
@@ -51,6 +60,11 @@
     left: -2.5em;
     position: absolute;
     top: 13em;
+
+    @media screen and (max-width: 675px) {
+      top: 8em;
+      gap: 6em;
+    }
 
     div {
       height: 4em;
