--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,48 +40,44 @@ p {
 /* DOWNLOAD PAGE */
 
 .download {
-  height: 415px;
+  height: 30em;
   background: #ffffff;
 }
 
 .appIcon {
   background: rgba(145, 107, 255, 0.25);
-  backdrop-filter: blur(8px);
-  border-radius: 28px;
-  width: 112px;
-  height: 112px;
+  backdrop-filter: blur(0.5em);
+  border-radius: 1.5em;
+  width: 7em;
+  height: 7em;
   z-index: 4;
   position: absolute;
-  bottom: 407px;
+  bottom: 29em;
 }
 
 .appIcon > div {
-  padding: 9px;
+  padding: 0.5em;
 }
 
 .downloadGroup {
-  margin-top: 21px;
+  margin-top: 1.3em;
   display: block;
   z-index: 4;
 }
 
 .downloadHeroText {
-  font-family: "Manrope";
-  font-style: normal;
   font-weight: 800;
-  font-size: 54px;
-  line-height: 64px;
+  font-size: 3.375em;
+  line-height: 1.2;
   text-align: center;
   letter-spacing: -0.04em;
   color: #454267;
 }
 
 .downloadDescription {
-  font-family: "Manrope";
-  font-style: normal;
   font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
+  font-size: 1.5em;
+  line-height: 1.2;
   text-align: center;
   letter-spacing: -0.04em;
   color: #454267;
@@ -91,8 +87,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  margin-top: 24px;
+  gap: 1em;
+  margin-top: 1.5em;
 }
 
 .downloadStoreContainer > a {
@@ -112,8 +108,8 @@ p {
   width: 90%;
 
   font-weight: 600;
-  font-size: 14px;
-  line-height: 18px;
+  font-size: 0.875em;
+  line-height: 1.125em;
   letter-spacing: -0.02em;
   color: #454267;
 }
@@ -121,19 +117,19 @@ p {
 .contacts {
   display: flex;
   width: 100%;
-  height: 50px;
+  height: 3.125em;
   justify-content: space-between;
   align-items: center;
 }
 
 .emailContainer {
   display: flex;
-  gap: 8px;
+  gap: 0.5em;
 }
 
 .socialContainer {
   display: flex;
-  gap: 30px;
+  gap: 2em;
 }
 
 .socialContainer > a:hover {
@@ -145,13 +141,13 @@ p {
 .bottomFooter {
   display: flex;
   align-items: center;
-  height: 50px;
+  height: 3.125em;
   width: 100%;
   justify-content: space-between;
 
   font-weight: 500;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 0.8125em;
+  line-height: 1.125em;
   letter-spacing: -0.02em;
   color: #45426770;
 }
@@ -170,13 +166,13 @@ p {
 .copyrightContainer {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 0.5em;
   color: #45426770;
 }
 
 .links {
   display: flex;
-  gap: 20px;
+  gap: 1.25em;
 }
 
 .links > a {
@@ -185,18 +181,23 @@ p {
 }
 
 .footerQRContainer {
-  margin-top: 57px;
+  margin-block: 2em;
   display: flex;
   flex-direction: column;
   gap: 0.5em;
   z-index: 2;
 
   font-weight: 600;
-  font-size: 14px;
-  line-height: 19px;
+  font-size: 0.875em;
+  line-height: 1.1;
   text-align: center;
   letter-spacing: -0.02em;
   color: #454267;
+}
+
+.qrImage {
+  width: 6em;
+  aspect-ratio: 1;
 }
 
 .copyrightLogo {
@@ -205,7 +206,7 @@ p {
 
 .curvedLine {
   position: absolute;
-  bottom: 100px;
+  bottom: 6.25em;
   width: 100vw;
   aspect-ratio: 1;
   background: linear-gradient(90deg, #ffffff 30%, #e7dfff 50%, #ffffff 70%);
@@ -217,7 +218,7 @@ p {
 .curvedOverlap {
   position: absolute;
   z-index: 0;
-  bottom: 103px;
+  bottom: calc(6.25em + 3px);
   width: 100vw;
   aspect-ratio: 1;
   background: #ffffff;
