--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -1,6 +1,7 @@
 .welcomePage {
   background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
   height: 100vh;
+  min-height: 40em;
 
   // TODO: still doesn't look good on high width
   &::after {
@@ -58,7 +59,7 @@
     color: #454267;
     font-size: 1.4em;
     font-weight: 700;
-    line-height: 1;
+    line-height: 1.2;
     margin-top: 0.45em;
     text-align: center;
   }
@@ -102,7 +103,7 @@
   animation: text-appearence 1s ease-out 3s both;
 
   position: absolute;
-  bottom: 0.3em;
+  bottom: 1%;
   left: 50%;
   z-index: 2;
 }
@@ -129,7 +130,7 @@
   }
 
   .diagonalArrow {
-    margin-bottom: 1.75em;
+    margin-bottom: 1.25em;
     margin-right: 0.5em;
     width: 1em;
     aspect-ratio: 1;
