--- a/styles/DownloadPage.module.scss
+++ b/styles/DownloadPage.module.scss
@@ -1,29 +1,41 @@
 .downloadPage {
-  height: 30em;
+  height: min-content;
   background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  padding-block: 2em;
 
   &::before {
     content: "";
     position: absolute;
-    bottom: 6.25em;
+    bottom: 8em;
     width: 100vw;
     aspect-ratio: 1;
     background: linear-gradient(90deg, #ffffff 30%, #e7dfff 50%, #ffffff 70%);
     border-radius: 0 0 50% 50%;
     transform: scaleX(2);
     z-index: 0;
+
+    @media (max-width: 740px) {
+      bottom: 37em;
+    }
   }
 
   &::after {
     content: "";
     position: absolute;
     z-index: 0;
-    bottom: calc(6.25em + 3px);
+    bottom: calc(8em + 3px);
     width: 100vw;
     aspect-ratio: 1;
     background: #ffffff;
     border-radius: 0 0 50% 50%;
     transform: scaleX(2);
+
+    @media (max-width: 740px) {
+      bottom: calc(37em + 3px);
+    }
   }
 }
 
@@ -35,7 +47,7 @@
   height: 7em;
   z-index: 4;
   position: absolute;
-  bottom: 29em;
+  top: -6em;
 
   div {
     padding: 0.5em;
@@ -43,13 +55,12 @@
 }
 
 .hero {
-  margin-top: 1.3em;
-  display: block;
   z-index: 4;
   line-height: 1.2;
   text-align: center;
   letter-spacing: -0.04em;
   color: #454267;
+  padding-inline: 2em;
 
   .title {
     font-weight: 800;
@@ -57,6 +68,7 @@
   }
 
   .subtitle {
+    margin-top: 0.5em;
     font-weight: 700;
     font-size: 1.5em;
   }
@@ -66,7 +78,7 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
-    margin-top: 1.5em;
+    margin-top: 2.5em;
 
     a {
       transition: all 100ms linear;
@@ -79,25 +91,57 @@
   }
 }
 
-.footer {
-  bottom: 0;
+.footerQRContainer {
+  position: relative;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  gap: 0.5em;
+  z-index: 2;
+
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.1;
+  text-align: center;
+  letter-spacing: -0.02em;
+  color: #454267;
+
+  .qrImage {
+    width: 6em;
+    aspect-ratio: 1;
+  }
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2em;
+  margin-top: -4em;
   width: 90%;
+  z-index: 1;
 
   color: #454267;
-  font-size: 0.875em;
+  font-size: 1rem;
   font-weight: 600;
   letter-spacing: -0.02em;
   line-height: 1.125em;
 
+  @media (max-width: 740px) {
+    gap: 1.5em;
+    margin-top: 2em;
+    width: 100%;
+  }
+
   .contacts {
     align-items: center;
     display: flex;
-    height: 3.125em;
     justify-content: space-between;
     width: 100%;
+
+    @media (max-width: 740px) {
+      flex-direction: column;
+      gap: 1.5em;
+    }
 
     .email {
       display: flex;
@@ -110,6 +154,7 @@
       display: flex;
       gap: 2em;
       list-style: none;
+      padding: 0;
 
       a:hover {
         filter: invert(46%) sepia(76%) saturate(3176%) hue-rotate(229deg)
@@ -122,10 +167,25 @@
     }
   }
 
+  .footerBorder {
+    height: 1px;
+    width: 100%;
+    background: linear-gradient(
+      90deg,
+      #e0dde8 0%,
+      rgba(210, 197, 255, 0) 50%,
+      #e0dde8 100%
+    );
+
+    @media (max-width: 740px) {
+      order: -1;
+      margin-bottom: 2em;
+    }
+  }
+
   .links {
     display: flex;
     align-items: center;
-    height: 3.125em;
     width: 100%;
     justify-content: space-between;
 
@@ -134,6 +194,11 @@
     line-height: 1.125em;
     letter-spacing: -0.02em;
     color: #45426770;
+
+    @media (max-width: 740px) {
+      flex-direction: column;
+      gap: 2em;
+    }
 
     .copyrightContainer {
       display: flex;
@@ -149,45 +214,16 @@
       display: flex;
       gap: 1.25em;
 
+      @media (max-width: 740px) {
+        flex-direction: column;
+        text-align: center;
+        order: -1;
+      }
+
       a {
         color: inherit;
         text-decoration: none;
       }
     }
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 55%;
-    height: 1px;
-    width: 100vw;
-    background: linear-gradient(
-      90deg,
-      #e0dde8 0%,
-      rgba(210, 197, 255, 0) 50%,
-      #e0dde8 100%
-    );
-  }
-}
-
-.footerQRContainer {
-  position: absolute;
-  bottom: 0.5em;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-  z-index: 2;
-
-  font-weight: 600;
-  font-size: 0.875em;
-  line-height: 1.1;
-  text-align: center;
-  letter-spacing: -0.02em;
-  color: #454267;
-
-  .qrImage {
-    width: 6em;
-    aspect-ratio: 1;
   }
 }
