--- a/styles/DestinationsPage.module.scss
+++ b/styles/DestinationsPage.module.scss
@@ -1,10 +1,4 @@
 .destinationPage {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30em, 1fr));
-  justify-content: center;
-  align-items: center;
-  justify-items: center;
-
   height: min-content;
   padding-inline: 2em;
 
@@ -27,6 +21,17 @@
     border-radius: 0 0 50% 50%;
     transform: scaleX(2);
   }
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30em, 1fr));
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+
+  height: 100%;
+  width: min(100%, 1280px);
 }
 
 .destinations {
