--- a/styles/DownloadPage.module.scss
+++ b/styles/DownloadPage.module.scss
@@ -8,7 +8,7 @@
     position: absolute;
     bottom: 8em;
     width: 100vw;
-    aspect-ratio: 1;
+    height: 100vh;
     background: linear-gradient(90deg, #ffffff 30%, #e7dfff 50%, #ffffff 70%);
     border-radius: 0 0 50% 50%;
     transform: scaleX(2);
@@ -25,7 +25,7 @@
     z-index: 0;
     bottom: calc(8em + 3px);
     width: 100vw;
-    aspect-ratio: 1;
+    height: 100vh;
     background: #ffffff;
     border-radius: 0 0 50% 50%;
     transform: scaleX(2);
