--- a/components/Common/StoreButton.module.scss
+++ b/components/Common/StoreButton.module.scss
@@ -1,4 +1,8 @@
 .store {
+  position: relative;
+  width: 10em;
+  aspect-ratio: 2 / 1;
+
   cursor: pointer;
   transition: all 100ms linear;
   animation-name: text-appearence;
