--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -11,7 +11,7 @@
     content: "";
     font-size: clamp(13px, 1.125vw, 16px);
     background-image: url("/assets/white-curve3x.png");
-    background-position: center;
+    background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
@@ -20,10 +20,6 @@
     bottom: 0;
     height: 22vh;
     z-index: 1;
-
-    @media (max-width: 740px) {
-      height: 17rem;
-    }
   }
 }
 
@@ -41,6 +37,7 @@
   align-self: center;
   z-index: 1;
   margin-bottom: 2.5em;
+  padding-inline: 5em;
 
   .textLogo {
     animation: text-appearence 0.5s ease-out 0.5s both;
@@ -72,7 +69,8 @@
     font-size: 5em;
     font-weight: 800;
     letter-spacing: -0.06em;
-    line-height: 1.3;
+    line-height: 1;
+    padding-bottom: 0.2em;
     text-align: center;
   }
 
