--- a/styles/DownloadPage.module.scss
+++ b/styles/DownloadPage.module.scss
@@ -223,6 +223,11 @@
       a {
         color: inherit;
         text-decoration: none;
+        transition: color 300ms linear;
+
+        &:hover {
+          color: #8965f6;
+        }
       }
     }
   }
