chore: extra space around footer border

--- a/styles/DownloadPage.module.scss
+++ b/styles/DownloadPage.module.scss
@@ -170,6 +170,7 @@
   .footerBorder {
     height: 1px;
     width: 100%;
+    margin-block: 0.2em;
     background: linear-gradient(
       90deg,
       #e0dde8 0%,
