--- a/styles/DownloadPage.module.scss
+++ b/styles/DownloadPage.module.scss
@@ -92,6 +92,7 @@
 }
 
 .footerQRContainer {
+  align-items: center;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -104,11 +105,6 @@
   text-align: center;
   letter-spacing: -0.02em;
   color: #454267;
-
-  .qrImage {
-    width: 6em;
-    aspect-ratio: 1;
-  }
 }
 
 .footer {
