--- a/components/Common/QrCode.module.scss
+++ b/components/Common/QrCode.module.scss
@@ -1,23 +1,23 @@
-.qrImage {
-  --borderWidth: 0.4em;
+$borderWidth: 0.4em;
 
+.qrImage {
   width: 6em;
   aspect-ratio: 1;
   background-color: #fff;
   padding: 6px 6px 0 6px;
   position: relative;
-  border-radius: var(--borderWidth);
+  border-radius: $borderWidth;
 }
 
 .qrImage:after {
   content: "";
   position: absolute;
-  top: calc(-1 * var(--borderWidth));
-  left: calc(-1 * var(--borderWidth));
-  height: calc(100% + var(--borderWidth) * 2);
-  width: calc(100% + var(--borderWidth) * 2);
+  top: calc(-1 * $borderWidth);
+  left: calc(-1 * $borderWidth);
+  height: calc(100% + $borderWidth * 2);
+  width: calc(100% + $borderWidth * 2);
   background: linear-gradient(90deg, #f292ff, #7651f2, #00d1d1);
-  border-radius: calc(2 * var(--borderWidth));
+  border-radius: calc(2 * $borderWidth);
   z-index: -1;
   animation: animatedgradient 1.5s ease alternate infinite;
   background-size: 300% 300%;
