--- a/styles/DestinationsPage.module.scss
+++ b/styles/DestinationsPage.module.scss
@@ -37,6 +37,7 @@
 .destinations {
   align-self: baseline;
   position: relative;
+  margin-top: 1em;
   margin-left: 1em;
   margin-bottom: 4em;
   max-width: 40em;
