--- a/styles/CommunityPage.module.scss
+++ b/styles/CommunityPage.module.scss
@@ -98,6 +98,19 @@
     margin-block-start: 2em;
   }
 
+  &::before {
+    content: "";
+    position: absolute;
+    top: 4em;
+    right: 13%;
+    width: 75%;
+    aspect-ratio: 1;
+    z-index: -1;
+
+    border-radius: 50%;
+    background: linear-gradient(273.81deg, #8564f7 32.09%, #9877f4 100%);
+  }
+
   .main {
     height: 100%;
     width: 100%;
@@ -138,16 +151,4 @@
     z-index: 1;
     width: 17em;
   }
-
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   top: 4em;
-  //   right: 13%;
-  //   width: 75%;
-  //   aspect-ratio: 1;
-
-  //   border-radius: 50%;
-  //   background: linear-gradient(273.81deg, #8564f7 32.09%, #9877f4 100%);
-  // }
 }
