--- a/styles/CommunityPage.module.scss
+++ b/styles/CommunityPage.module.scss
@@ -113,11 +113,15 @@
 
   .main {
     height: 100%;
-    width: 100%;
+    width: 50%;
     position: absolute;
     top: 0;
     left: 0;
+    transform: translate(50%);
     z-index: 1;
+    background: rgba(59, 49, 86, 0.25);
+    border-radius: 20% / 50%;
+    box-shadow: 0px 2em 5em rgba(59, 49, 86, 0.32);
   }
 
   .usercard1 {
