--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -17,9 +17,9 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: -1px;
     height: 22vh;
-    z-index: 1;
+    z-index: 2;
   }
 }
 
