feat: update scaling of subtitle text

--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -78,7 +78,7 @@
     animation: text-appearence 1s ease-out 0.7s both;
 
     color: #454267;
-    font-size: 1.4em;
+    font-size: max(1rem, 1.4em);
     font-weight: 700;
     line-height: 1.2;
     margin-top: 0.2em;
