--- a/styles/GuidesPage.module.scss
+++ b/styles/GuidesPage.module.scss
@@ -75,6 +75,7 @@
       padding: 6px;
       font-weight: 600;
       font-size: 1em;
+      transition: background 0.2s ease-in-out;
 
       &:hover {
         background-color: #464649;
@@ -82,6 +83,7 @@
 
       &.btnActive {
         background-color: #59537b;
+        transition: background 0.5s ease-out;
       }
 
       // TODO: is this necessary?
@@ -140,6 +142,7 @@
     border-radius: 50%;
     backface-visibility: hidden;
     transform: translate3d(0, 0, 0);
+    transition: all 0.5s linear;
   }
 
   .backgroundCircleTeal {
@@ -151,6 +154,7 @@
     border-radius: 50%;
     backface-visibility: hidden;
     transform: translate3d(0, 0, 0);
+    transition: all 0.5s linear;
   }
 
   .backgroundCircleTeal:first-child {
@@ -170,6 +174,7 @@
     border-radius: 50%;
     backface-visibility: hidden;
     transform: translate3d(0, 0, 0);
+    transition: all 0.5s linear;
   }
 
   .backgroundCirclePink:first-child {
@@ -185,4 +190,8 @@
   width: 100%;
   height: 100%;
   padding: 1em 4em;
+
+  & > div {
+    transition: opacity 0.1s linear;
+  }
 }
