--- a/styles/GuidesPage.module.scss
+++ b/styles/GuidesPage.module.scss
@@ -113,6 +113,10 @@
   text-align: center;
   z-index: 1;
 
+  @media (min-width: "978px") {
+    margin-top: 0;
+  }
+
   .highlightLight {
     background: #6d57a1;
     border-radius: 8px;
@@ -188,7 +192,7 @@
 
 .iphoneFrame {
   width: 100%;
-  height: 100%;
+  height: 30em;
   padding: 1em 4em;
 
   & > div {
