--- a/styles/GuidesPage.module.scss
+++ b/styles/GuidesPage.module.scss
@@ -113,7 +113,7 @@
   text-align: center;
   z-index: 1;
 
-  @media (min-width: "978px") {
+  @media (max-width: 930px) {
     margin-top: 0;
   }
 
@@ -192,7 +192,7 @@
 
 .iphoneFrame {
   width: 100%;
-  height: 30em;
+  height: 21rem;
   padding: 1em 4em;
 
   & > div {
