--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -2,6 +2,7 @@
   background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
   height: 100vh;
   min-height: 50em;
+  max-height: 1450px;
 
   @media (max-width: 740px) {
     height: min-content;
